# olindba-fritiofr-cryptography

backend/: .gitignore  package-lock.json  package.json  tsconfig.json
backend/files/: abcd
backend/src/: db.ts  index.ts
backend/src/middleware/: auth.ts  logger.ts
backend/src/routes/file/: get_file.ts  upload_file.ts
backend/src/utils/: request.ts
frontend/: Cargo.toml
frontend/src/: client.rs  main.rs
